<resources>
    <string name="app_name">Shows To Watch</string>

    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>

    <string name="show_form_toolbar_button">Button</string>
    <string name="show_form_def_title">Show Form Title</string>
    <string name="show_form_title_label">Title</string>
    <string name="show_form_title_hint">Name</string>
    <string name="show_form_season_label">Season</string>
    <string name="show_form_episode_label">Episode</string>
    <string name="show_form_num_hint">0</string>
    <string name="show_form_status_label">Status</string>
    <string name="show_form_in_progress_label">In Progress</string>
    <string name="show_form_abandoned_label">Abandoned</string>
    <string name="show_form_completed_label">Completed</string>
    <string name="show_form_tvdb_button">Set TVDB Info</string>
    <string name="show_form_delete_button">Delete Show</string>
    <string name="show_form_delete_prompt">Delete show?</string>
    <string name="show_form_positive_button">OK</string>
    <string name="show_form_negative_button">Cancel</string>
    <string name="show_form_action_add">Add</string>
    <string name="show_form_action_save">Save</string>
    <string name="show_form_add_title">Add Show</string>

    <string name="show_search_title">Set TVDB Show</string>
</resources>
