<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/show_form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="io.josephtran.showstowatch.show_form.ShowFormFragment">

        <TextView
            android:id="@+id/show_form_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/show_form_title_label" />

        <EditText
            android:id="@+id/show_form_title_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/show_form_title_hint"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/darker_gray" />

        <TextView
            android:id="@+id/show_form_season_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/show_form_season_edit"
            android:text="@string/show_form_season_label" />

        <EditText
            android:id="@+id/show_form_season_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/show_form_num_hint"
            android:textColorHint="@android:color/darker_gray" />

        <TextView
            android:id="@+id/show_form_episode_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/show_form_episode_edit"
            android:text="@string/show_form_episode_label" />

        <EditText
            android:id="@+id/show_form_episode_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/show_form_num_hint"
            android:textColorHint="@android:color/darker_gray" />

        <TextView
            android:id="@+id/show_form_status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/show_form_status_label" />

        <RadioGroup
            android:id="@+id/show_form_progress_btns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/show_form_in_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@android:color/black"
                android:checked="true"
                android:text="@string/show_form_in_progress_label" />

            <RadioButton
                android:id="@+id/show_form_abandoned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@android:color/black"
                android:text="@string/show_form_abandoned_label" />

            <RadioButton
                android:id="@+id/show_form_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@android:color/black"
                android:text="@string/show_form_completed_label" />
        </RadioGroup>
    </LinearLayout>
</ScrollView>
